# email-triage-env

./: .gitignore  Dockerfile  README.md  email_env.py  emails.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py
env/: email_env.py  graders.py
env/data/: emails.py
server/: app.py
